// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Repo /> should match the snapshot when the programming language is detected 1`] = `
.c0::before {
  content: "📁";
}

<div
  className="c0"
>
  <h2>
    levenshtein
  </h2>
  <p>
    A Levenshtein Distance implementation using C++ with a dynamic programming approach.
  </p>
  <p>
    Created at 
    Thu Aug 22 2019 10:03:22 GMT-0300 (Brasilia Standard Time)
  </p>
  <p>
    Language: 
    C++
  </p>
  <p>
    0
  </p>
  <p>
    <a
      href="/commits/guilhermeagostinelli/levenshtein"
      onClick={[Function]}
    >
      See commits
    </a>
  </p>
  <p>
    <a
      href="https://github.com/guilhermeagostinelli/levenshtein"
      rel="noopener noreferrer"
      target="_blank"
    >
      Go to GitHub
    </a>
  </p>
</div>
`;

exports[`<Repo /> should match the snapshot when the programming language is not detected 1`] = `
.c0::before {
  content: "📁";
}

<div
  className="c0"
>
  <h2>
    levenshtein
  </h2>
  <p>
    A Levenshtein Distance implementation using C++ with a dynamic programming approach.
  </p>
  <p>
    Created at 
    Thu Aug 22 2019 10:03:22 GMT-0300 (Brasilia Standard Time)
  </p>
  <p>
    Language: 
    undetected
  </p>
  <p>
    0
  </p>
  <p>
    <a
      href="/commits/guilhermeagostinelli/levenshtein"
      onClick={[Function]}
    >
      See commits
    </a>
  </p>
  <p>
    <a
      href="https://github.com/guilhermeagostinelli/levenshtein"
      rel="noopener noreferrer"
      target="_blank"
    >
      Go to GitHub
    </a>
  </p>
</div>
`;
